--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
 	<link rel="stylesheet" href="css/abs_layout.css" type="text/css" media="screen" />
 	
 
-		
-	</script>
 	<script type="text/javascript" src="js/_small_serv.js"></script>
 	<script type="text/javascript" src="js/w_storage.js"></script>
 	<script type="text/javascript" src="js/c_quene.js"></script>
@@ -23,7 +21,7 @@
 	
 	<script type="text/javascript" src="js/json2.min.js"></script>
 	<script type="text/javascript" src="js/md5.min.js"></script>
-	<script type="text/javascript" src="js/jquery-1.4.2.js" class="for-iframe"></script>
+	<script type="text/javascript" src="js/jquery-1.4.2.min.js" class="for-iframe"></script>
 	<script type="text/javascript" src="js/widget.resize.js"></script>
 
 
