--- a/browser_bg_action.html
+++ b/browser_bg_action.html
@@ -3,11 +3,47 @@
   <head>
 	<meta charset="utf-8">
 	<title>Seesu</title>
+	<script type="text/javascript" src="js/w_storage.js"></script>
+	<script type="text/javascript" src="js/c_quene.js"></script>
+	<script type="text/javascript" src="js/c_cache_ajax.js"></script>
+	
+	<script type="text/javascript" src="js/json2.min.js"></script>
+	<script type="text/javascript" src="js/md5.min.js"></script>
+	<script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
+	<script type="text/javascript" src="js/_small_serv.js"></script>
+	<script type="text/javascript" src="js/widget.resize.js"></script>
+
+
+	
+	<script type="text/javascript" src="js/jquery.debounce-1.0.5.js"></script>
+	<script type="text/javascript" src="js/soundmanager2.js" class="for-sm2-iframe"></script>
+
+	 
+	
+	<script type="text/javascript" src="js/network.vk.login.js"></script>
+	<script type="text/javascript" src="js/network.js"></script>
+	<script type="text/javascript" src="js/network.soundcloud.js"></script>
+	<script type="text/javascript" src="js/network.vk.js"></script>
+	<script type="text/javascript" src="js/network.vk.api.js"></script>
+	<script type="text/javascript" src="js/network.lastfm.js"></script>
+	
+	
+	<script type="text/javascript" src="js/seesu.js"></script>
+	<script type="text/javascript" src="js/seesu.search.js"></script>
+	
+	<script type="text/javascript" src="js/seesu.player.html5.js" class="for-sm2-iframe"></script>
+	<script type="text/javascript" src="js/seesu.player.sm2.js" class="for-sm2-iframe"></script>
+	<script type="text/javascript" src="js/seesu.player.js"></script>
+	
+	
+
+	<script type="text/javascript" src="js/c_buttmen.js"></script>
+	<script type="text/javascript" src="js/pressed_node_tester.js"></script>
+	
+	
 	<script type="text/javascript">
-		if (typeof chrome === 'object' && chrome.browserAction && chrome.browserAction.onClicked){
-			chrome.browserAction.onClicked.addListener(function() {
-				chrome.tabs.create({url: chrome.extension.getURL('index.html')})
-			});
+		if (typeof chrome === 'object' && chrome.extension){
+			
 		}
 	</script>
   </head>
