--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="viewport"  content="minimum-scale=1.0, width=device-width, maximum-scale=0.6667, user-scalable=no" />
 
-	<script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
+	<script type="text/javascript" src="js/jquery-1.4.2.js"></script>
 	
 	
 	<script type="text/javascript" src="js/seesu.events.js"></script>
 
   </head>
   
-  <body>
+  <body style="min-height:400px !important;min-width:500px;">
 <div id="slider" class="show-start">
 	<div class="navs">
 		<span class="nnav nav-start" title="Seesu start page" id="start_search"><b></b></span>
