do not save nodes in core :)

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 				su.ui.views.browsing.search_results = false;
 				su.ui.views.browsing.playlist = false;
 			})
+			su.ui.views.reset();
 		}
 	</script>
 	<script type="text/javascript" src="js/seesu.search.js"></script>
